adding device script, and update to configs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,6 @@
     "types": ["vitest/globals", "node"]
   },
   "exclude": ["dist", "node_modules", "playwright-report", "test-results"],
-  "include": ["tests", "pages", "vitest.config.ts"]
+  "include": ["tests", "pages", "playwright.config.ts", "vitest.config.ts"]
+
 }
