--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.53.1",
+    "@playwright/test": "^1.53.2",
     "@types/node": "^24.0.4",
+    "typescript": "^5.4.0",
     "vite": "^7.0.0",
-    "vitest": "^3.2.4",
-    "typescript": "^5.4.0"
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "dotenv": "^17.0.0",
